# od-cli-scanner

./: .gitignore  Cargo.toml  LICENSE  PROJECT_STATUS.md  README.md  REVIEW.md  package.json
.github/workflows/: ci.yml  release.yml
crates/napi/: Cargo.toml
crates/napi/src/: lib.rs
crates/od-cli-scanner/: Cargo.toml
crates/od-cli-scanner/src/: lib.rs
crates/od-cli-scanner/src/cli/: mod.rs
crates/od-cli-scanner/src/core/: build_args.rs  detector.rs  executables.rs  mod.rs  probe.rs  registry.rs  spawn.rs  types.rs  version_parser.rs
crates/od-cli-scanner/tests/: executables_test.rs  probe_test.rs
crates/od-scan/: Cargo.toml
crates/od-scan/src/: main.rs
crates/od-scan/tests/: cli_test.rs
docs/: napi-plan.md  vscode-plugin-prd.md
npm/: index.js  index.linux-x64-gnu.node  native.js  package.json  test.js
npm/src/: index.ts
